--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -182,9 +182,18 @@ Academy of Finland, 2020</span></span></font></p>
 <span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">
 Fellow of Asia-Pacific Artificial Intelligence Association (AAIA), 2021-.</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
-<font size="4">-- IAPR Fellow, 2020- (For contributions to video analysis and 
-affective computing).</font></span></p>
+-- Fellow of IAPR
+<span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">
+(International Association for Pattern Recognition)</span>, 2020- (For 
+contributions to video analysis and affective computing).</span></font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
+<font size="4">-- </font></span><font size="4">
+<span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">
+Fellow of ELLIS (European Laboratory for Learning and Intelligent Systems) 
+society, 2023-.</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <font size="4"><span style="font-family: Times New Roman">--&nbsp; Selected to
 <a target="_blank" style="font-family: Times New Roman" href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/4?fbclid=IwAR1d4PyRLUjFosQfpmynpn2WHrufhuURBZCJZWQwPzo13ARvsb5rBRfFOQE">
