--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -169,14 +169,20 @@ Member of Academia Europaea</u></b></font></font></p>
 <font size="4">-- <b><font face="Times New Roman"><u>2022-present, Member of 
 Finnish Academy of Sciences and Letters </u></font></b> </font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
-<font size="4">-- </font><b><font size="4" face="Times New Roman"><u>2022-present, IEEE 
-Fellow</u> </font></b></p>
+<font size="4">-- </font><u><font size="4" face="Times New Roman"><b>2022-present, IEEE</b></font></u><b><font size="4" face="Times New Roman"><u> 
+(The Institute of Electrical and Electronics Engineers) Fe</u></font></b><font size="4" face="Times New Roman"><b><u>llow</u> </b> </font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
-<font size="4">-- </font><u><b><font size="4" face="Times New Roman">2020-present, 
-IAPR Fellow</font></b></u></p>
+<font face="Times New Roman" size="4"><b><span lang="en-us">-- <u>2023-present, 
+ELL</u></span></b></font><font face="Times New Roman" size="4"><b><u>IS (<a jsname="UWckNb" data-jsarwt="1" data-usg="AOvVaw2tIMRTNLgguQAmgEGN0a-F" data-ved="2ahUKEwjXmICaxqSBAxUlExAIHaYHC-4QFnoECA8QAQ" href="https://ellis.eu/"><font face="Times New Roman">European 
+Lab for Learning &amp; Intelligent Systems</font></a>) Fellow</u></b></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
-<font size="4">-- <b><u><span style="font-family: Times New Roman">2021-present, 
-AAIA Fellow</span></u></b></font></p>
+<font size="4">-- </font><font size="4" face="Times New Roman"><b><u>2020-present, 
+IAPR</u></b></font><u><b><font size="4" face="Times New Roman"> (The 
+International Association for Pattern Recognition) Fel</font></b></u><font size="4" face="Times New Roman"><b><u>low</u></b></font></p>
+<p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
+<font size="4">-- <span style="font-family: Times New Roman"><u> <b>2021-present, 
+AAI</b></u></span><b><u><span style="font-family: Times New Roman">A (The 
+Asia-Pacific Artificial Intelligence Association) Fe</span></u></b></font><span style="font-family: Times New Roman"><u><b><font size="4">llow</font></b></u></span></p>
 <p style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt" class="MsoListParagraph">
 <font size="4"><span lang="en-us">--</span> <u><b><font face="Times New Roman">
 <span lang="en-us">2022-present, </span>AAIA Women Committee members</font></b></u></font></p>
