--- a/teammembers.htm
+++ b/teammembers.htm
@@ -32,51 +32,60 @@ span.contentpasted0
 		and postdoctoral research fellows</span></u>:</b></font></td>
 	</tr>
 	<tr>
+		<td height="0" align="center" valign="top" width="209">
+		<img border="0" src="Qing.jpg" width="132" height="165"></td>
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Jukka.png" width="112" height="148"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Hanlin.jpg" width="157" height="149"></td>
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Qianru.jpg" width="153" height="150"></td>
-		<td height="0" align="center" valign="top" width="184">
-		<img border="0" src="Yang.jpg" width="148" height="147"></td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
 	<tr>
+		<td height="0" align="center" valign="top" width="209">
+		<font face="Times New Roman"><b><span lang="zh-cn">Dr</span>. </b></font>
+		<b><font face="Times New Roman">Qing <span lang="zh-cn">LIU</span></font></b><p style="text-align: center">
+		&nbsp;<p style="text-align: center">
+		<b><span lang="zh-cn">Academy Research Fellow</span></b></td>
 		<td width="226" height="0" align="center" valign="top">
-		<font face="Times New Roman"><b>Dr. Jukka KOMULAINEN </b></font></td>
+		<font face="Times New Roman"><b>Dr. Jukka KOMULAINEN</b></font><p>&nbsp;</p>
+		<p style="text-align: center"><b>
+		<span class="HwtZe" jsaction="mouseup:Sxi9L,BR6jm; mousedown:qjlr0e" jsname="jqKxS" lang="en">
+		<span jsaction="agoMJf:PFBcW;MZfLnc:P7O7bd;nt4Alf:pvnm0e,pfE8Hb,PFBcW;B01qod:dJXsye;H1e5u:iXtTIf;lYIUJf:hij5Wb;bmeZHc:iURhpf;Oxj3Xe:qAKMYb,yaf12d" jsname="txFAF" class="jCAhz ChMk0b" jscontroller="Gn4SMb">
+		<span class="ryNqvb" jsaction="click:E6Tfl,GFf3ac,tMZCfe; contextmenu:Nqw7Te,QP7LD; mouseout:Nqw7Te; mouseover:E6Tfl,c2aHje" jsname="W297wb">
+		University lecturer</span></span></span></b><font face="Times New Roman"><b> </b></font></td>
 		<td height="0" align="center" valign="top" width="209">
 		<font face="Times New Roman"><b>Dr. Hanlin MO</b></font></td>
 		<td height="0" align="center" valign="top" width="224">
 		<font face="Times New Roman"><b>Dr. Qianru XU</b></font></td>
-		<td height="0" align="center" valign="top" width="184">
-		<font face="Times New Roman"><b>Dr. Yang LIU</b></font></td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
 	<tr>
+		<td height="0" align="center" valign="top" width="184">
+		<img border="0" src="Yang.jpg" width="148" height="147"></td>
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Haoyu.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Yante.jpg"></td>
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Muzammil.jpg" width="139" height="142"></td>
-		<td height="0" align="center" valign="top" width="184">
-		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
 	<tr>
+		<td height="0" align="center" valign="top" width="184">
+		<font face="Times New Roman"><b>Dr. Yang LIU</b></font></td>
 		<td width="226" height="0" align="center" valign="top">
-		<span lang="zh-cn"><b><font face="Times New Roman">Dr</font></b></span><b><font face="Times New Roman">. Haoyu CHEN</font></b></td>
+		<span lang="zh-cn"><b><font face="Times New Roman">Dr</font></b></span><b><font face="Times New Roman">. 
+		Haoyu CHEN</font></b></td>
 		<td height="0" align="center" valign="top" width="209">
 		<b>
 		<font face="Times New Roman"><span lang="zh-cn">Dr</span>. Yante LI</font></b></td>
 		<td height="0" align="center" valign="top" width="224">
 		<b><font face="Times New Roman">Dr. Muzammil BEHZAD</font></b></td>
-		<td height="0" align="center" valign="top" width="184">
-		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
@@ -124,7 +133,7 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="184">
 		　<img border="0" src="Lili.jpg" width="135" height="142"></td>
 		<td height="0" align="center" valign="top" width="225">
-		&nbsp;</td>
+		　<img border="0" src="Haotian.jpg"></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -140,7 +149,7 @@ span.contentpasted0
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<b><font face="Times New Roman">　Ms. Lili LIU</font></b></td>
 		<td height="0" align="center" valign="top" width="225">
-		&nbsp;</td>
+		　<font face="Times New Roman"><b>Mr. Haotian LIU</b></font></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -173,9 +182,9 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="225">
-		　<img border="0" src="Haotian.jpg"></td>
+		&nbsp;</td>
 		<td width="223" height="0" align="center" valign="top">
-		<img border="0" src="Sheraz.jpg"></td>
+		&nbsp;</td>
 		<td width="224" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="184" height="0" align="center" valign="top">
@@ -185,10 +194,9 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="225">
-		　<font face="Times New Roman"><b>Mr. Haotian LIU</b></font></td>
+		<font face="Times New Roman"><b>Mr. Hao Yu</b></font></td>
 		<td width="223" height="0" align="center" valign="top">
-		<b>
-		<font face="Times New Roman">Mr. Sheraz Khan </font></b></td>
+		&nbsp;</td>
 		<td width="224" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="184" height="0" align="center" valign="top">
@@ -203,7 +211,7 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="Qing.jpg" width="132" height="165"></td>
+		<img border="0" src="Yujie.jpg"></td>
 		<td height="0" align="center" valign="top" width="225">
 		　</td>
 		<td height="0" align="center" valign="top" width="224">
@@ -215,10 +223,14 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="209">
-		<b><font face="Times New Roman">Prof</font></b><font face="Times New Roman"><b>. </b></font>
-		<b><font face="Times New Roman">Qing Liu</font></b><p style="text-align: center">
-		<font face="Times New Roman">(Central South University): Feb. 2023-Dec. 
-		202</font>3&nbsp;</td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Dr. Yujie LIU</b></font></p>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Assistant Professor</b></font></p>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>China University of Petroleum (East 
+		China)</b></font></p>
+		<p style="text-align: center"><span lang="zh-cn">Aug. 2023 - Aug. 2024</span></td>
 		<td height="0" align="center" valign="top" width="225">
 		　</td>
 		<td height="0" align="center" valign="top" width="224">
@@ -230,8 +242,48 @@ span.contentpasted0
 	</tr>
 	</table>
 <p class="title" style="margin-top:1cm; margin-bottom:9pt">
-<font size="4"><b>Past members:</b></font></p>
+<font size="4"><b><span lang="zh-cn">A</span>lumni:</b></font></p>
 <table border="0" width="40%">
+	<tr>
+		<td width="243" height="0" align="center" valign="top">
+		<img border="0" src="Sheraz.jpg" width="170" height="169"></td>
+		<td height="0" align="center" valign="top" width="397">
+		<div>
+			<a data-field="experience_company_logo" class="optional-action-target-wrapper 
+            display-flex" target="_self" href="https://www.linkedin.com/company/10190539/">
+			<div class="ivm-image-view-model  pvs-entity__image ">
+				<div class="ivm-view-attr__img-wrapper ivm-view-attr__img-wrapper--use-img-tag display-flex
+        
+        ">
+&nbsp;</div>
+			</div>
+			</a></div>
+		<div class="display-flex flex-column full-width align-self-center">
+			<div class="display-flex flex-row justify-space-between">
+				<div class="
+              display-flex flex-column full-width">
+					<div class="display-flex flex-wrap align-items-center full-height">
+						<div class="display-flex ">
+							<div class="
+          display-flex full-width">
+								<div class="display-flex align-items-center
+              mr1 t-bold">
+		<b>
+		<font face="Times New Roman">Mr. Sheraz Khan</font></b><p>&nbsp;</p>
+									<p style="text-align: center">
+									<span aria-hidden="true">Artificial 
+									Intelligence Engineer</span></p>
+									<p style="text-align: center">
+									<span lang="zh-cn">Valossa Labs, Oulu, 
+									Finland</span></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<p>&nbsp;</td>
+	</tr>
 	<tr>
 		<td width="243" height="0" align="center" valign="top">
 		<img border="0" src="Henglin.jpg" width="130" height="141"></td>
