--- a/publications.htm
+++ b/publications.htm
@@ -150,83 +150,111 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2023</b></font></span></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4">&nbsp;30<span lang="en-us">8</span>. 
+<font face="Times New Roman" size="4">&nbsp;314. 
 <b>Guoying Zhao</b>, Xiaobai Li, Yante Li, Matti Pietik&auml;inen. <u>Facial 
 Micro-Expressions: An Overview.</u> Proceedings of the IEEE. 2023. </font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4">&nbsp;30<span lang="en-us">7</span>. Haoyu Chen, Henglin Shi, Xin 
+<font face="Times New Roman" size="4">&nbsp;313. Haoyu Chen, Henglin Shi, Xin 
 Liu, Xiaobai Li, <b>Guoying Zhao</b>. <u>SMG: A Micro-Gesture Dataset Towards 
 Spontaneous Body Gestures for Emotional Stress State Analysis</u>. International 
 Journal on Computer Vision (IJCV), 2023.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;306. Zitong Yu, 
+<font face="Times New Roman" size="4">&nbsp;312. Haoyu Chen, Hao Tang, Radu 
+Timofte, Luc Van Gool, <b>Guoying Zhao</b>. <u>LART: Neural Correspondence 
+Learning with Latent Regularization Transformer for 3D Motion Transfer</u>.
+</font><font face="Times New Roman" size="4">IEEE Conference on Neural 
+Information Processing Systems (NeurIPS), 2023.</font></p>
+<p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;311. Zitong Yu, 
 Yunxiao Qin, Xiaobai Li, Chenxu Zhao, Zhen Lei, and <b>Guoying Zhao</b>. <u>Deep 
 Learning for Face Anti-Spoofing: A Survey</u>.&nbsp; </font></span>
 <font face="Times New Roman" size="4">IEEE Transactions on Pattern Analysis and 
 Machine Intelligence journal (TPAMI). 202<span lang="en-us">3</span>.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;305. Tuomas 
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;310. Tuomas 
 Varanka, Yante Li, Wei Peng, <b>Guoying Zhao</b>. </font></span>
 <font face="Times New Roman" size="4"><u>Data Leakage and Evaluation Issues in 
 Micro-Expression Analysis</u>. IEEE Transactions on Affective Computing, 2023.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;304</span>. Xiaobai Li, Shiyang Cheng, Yante Li, Muzammil Behzad, 
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;309</span>. Xiaobai Li, Shiyang Cheng, Yante Li, Muzammil Behzad, 
 Jie Shen, Stefanos Zafeiriou, Maja 
 Pantic, <b>Guoying Zhao</b>. <u>4DME: A spontaneous 4D micro-expression dataset 
 with multimodalities</u>. IEEE Transactions on Affective Computing, 202<span lang="en-us">3</span>.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;303</span>. Yante 
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;308</span>. Yante 
 Li, Jinsheng Wei, Yang Liu, Janne Kauttonen<span lang="en-us">,</span> <b>Guoying Zhao</b>. <u>Deep 
 Learning for Micro-expression Recognition: A Survey</u>. IEEE Transactions on 
 Affective Computing, 202<span lang="en-us">3.</span></font></p>
 <p style="margin-top:6.0pt; margin-bottom:6.0pt; text-indent:-.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in" class="MsoPlainText">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;302. </span>Yang 
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;307. </span>Yang 
 Liu, Xingming Zhang, Yante Li, Jinzhao Zhou, Xin Li, <b>Guoying Zhao</b><span lang="en-us">.
 <u>Graph-based Facial Affect Analysis: A Review</u>. </span>IEEE Transactions on 
 Affective Computing, 202<span lang="en-us">3</span>.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;<span lang="en-us">301</span>. <b>Guoying Zhao</b>, Yante Li, 
+<font face="Times New Roman" size="4">&nbsp;<span lang="en-us">306</span>. <b>Guoying Zhao</b>, Yante Li, 
 Qianru Xu. <u>From Emotion AI to Cognitive AI</u>. International Journal of 
 Network Dynamics and Intelligence. 2023.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;300.</font></span><font face="Times New Roman" size="4">&nbsp; 
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;305.</font></span><font face="Times New Roman" size="4">&nbsp; 
 Zitong Yu, Yuming Shen, Jingang Shi, Hengshuang Zhao, Yawen Cui, Jiehua Zhang, 
-Philip Torr <span lang="en-us">&amp;</span> <b>Guoying Zhao</b>. PhysFormer++: 
+Philip Torr <span lang="en-us">&amp;</span> <b>Guoying Zhao</b>. <u>PhysFormer++: 
 Facial Video-based Physiological Measurement with SlowFast Temporal Difference 
-Transformer. International Journal on Computer Vision (IJCV), 2023. (3)</font></p>
+Transformer</u>. International Journal on Computer Vision (IJCV), 2023. </font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;299. </span>Yang 
-Liu, Xingming Zhang, Janne Kauttonen, <b>Guoying Zhao</b>. Uncertain Facial 
-Expression Recognition via Multi-task Assisted Correction. IEEE Transactions on 
-Multimedia, 2023. (2) </font></p>
+<font face="Times New Roman" size="4"><span lang="en-us">&nbsp;304. </span>Yang 
+Liu, Xingming Zhang, Janne Kauttonen, <b>Guoying Zhao</b>. <u>Uncertain Facial 
+Expression Recognition via Multi-task Assisted Correction</u>. IEEE Transactions on 
+Multimedia, 2023. </font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;298. Lili Liu, Zhaoqiang Xia, 
-Xiaobiao Zhang, Xiaoyi Feng, <b>Guoying Zhao</b>. Information-enhanced Network 
-for Noncontact Heart Rate Estimation from Facial Videos. IEEE Transactions on 
-Circuits and Systems for Video Technology, 2023. (2)</font></p>
-<p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;29<span lang="en-us">7</span>. Qianru Xu, Chaoxiong Ye, 
-Xueqiao Li, Guoying Zhao &amp; Piia Astikainen. Pain modulates early sensory 
-brain responses to task-irrelevant emotional faces. European Journal of Pain. 
+<font face="Times New Roman" size="4">&nbsp;303. Lili Liu, Zhaoqiang Xia, 
+Xiaobiao Zhang, <span lang="en-us">Jinye Peng, </span>Xiaoyi Feng, <b>Guoying 
+Zhao</b>. <u>Information-enhanced Network for Noncontact Heart Rate Estimation from 
+Facial Videos</u>. IEEE Transactions on Circuits and Systems for Video Technology, 
 2023.</font></p>
-<p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;29<span lang="en-us">6</span>. Kaijie Ma, Lina Nie, Beijing Chen &amp; Guoying Zhao. 
-End-to-End Dual-Branch Network Towards Synthetic Speech Detection. IEEE Signal 
+<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<font face="Times New Roman" size="4">&nbsp;302. Qianru Xu, Chaoxiong Ye, 
+Xueqiao Li, <b>Guoying Zhao</b> &amp; Piia Astikainen. <u>Pain modulates early sensory 
+brain responses to task-irrelevant emotional faces</u>. European Journal of Pain. 
+2023.</font></p>
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt; line-height:115%">
+<font face="Times New Roman" size="4">&nbsp;301. Kaijie Ma, Lina Nie, Beijing Chen &amp; 
+<b>Guoying Zhao</b>. 
+<u>End-to-End Dual-Branch Network Towards Synthetic Speech Detection</u>. IEEE Signal 
 Processing Letters. 2023.</font></p>
-<p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;295. </font>
-</span><font face="Times New Roman" size="4">Hao Yu, Xu Cheng, Wei Peng, Weihao 
-Liu, <b>Guoying Zhao</b>. Modality Unifying Network for Visible Infrared Person 
-Re-Identification. ICCV 2023.</font></p>
+<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<font face="Times New Roman" size="4">&nbsp;300. Jinsheng Wei, Haoyu Chen, 
+Guanming Lu, Jingjie Yan, Xie Yue, <b>Guoying Zhao</b>. <u>Prior Information based 
+Decomposition and Reconstruction Learning for Micro-Expression Recognition</u>. IEICE Transactions on Information and Systems, Vol. E106-D, No.10. 2023.</font></p>
+<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<font face="Times New Roman" size="4">&nbsp;299. Lili Liu, Zhaoqiang Xia, 
+Xiaobiao Zhang, Jinye Peng , Xiaoyi Feng, <b>Guoying Zhao</b>. <u>Heart rate 
+estimation by leveraging static and dynamic region weights</u>. Journal of 
+Electronic Imaging. 2023.</font></p>
+<p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt; line-height:115%">
+<font face="Times New Roman" size="4">&nbsp;298. Hao Yu, Xu Cheng, Wei Peng, Weihao 
+Liu, <b>Guoying Zhao</b>. <u>Modality Unifying Network for Visible Infrared Person 
+Re-Identification</u>. ICCV 2023.</font></p>
+<p class="MsoListParagraphCxSpLast" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<font face="Times New Roman" size="4">&nbsp;297. Marko Savic, <b>Guoying Zhao</b>.
+<u>De-identification of facial videos while preserving remote physiological 
+utility</u>. BMVC 2023.</font></p>
+<p class="MsoListParagraphCxSpLast" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<font face="Times New Roman" size="4">&nbsp;296. Abdelrahman Mostafa, Wei Peng,
+<b>Guoying Zhao</b>. <u>SRBGCN: Tangent space-Free Lorentz Transformations for 
+Graph Feature Learning</u>. BMVC 2023.</font></p>
+<p class="MsoListParagraphCxSpLast" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
+<font face="Times New Roman" size="4">&nbsp;295. Hui Kuurila-Zhang, Haoyu Chen,
+<b>Guoying Zhao</b>. <u>Adaptive Adversarial Norm Space for Efficient 
+Adversarial Training</u>. BMVC 2023.</font></p>
 <p class="MsoListParagraphCxSpLast" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 0in; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;294. Haotian Liu, Qing Liu, Yang 
-Liu, Yixiong Liang, <b>Guoying Zhao</b>. Exploring Effective Knowledge 
-Distillation for Tiny Object Detection. ICIP 2023.</font></p>
+Liu, Yixiong Liang, <b>Guoying Zhao</b>. <u>Exploring Effective Knowledge 
+Distillation for Tiny Object Detection</u>. ICIP 2023.</font></p>
 <p class="MsoPlainText" style="text-align: justify; text-justify: inter-ideograph; text-indent: -.25in; line-height: 115%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;293. Andy Nguyen, Yante Li, Sanna 
-J&auml;rvel&auml;, Yang Liu and <b>Guoying Zhao</b>. Emotional Synchrony through 
+J&auml;rvel&auml;, Yang Liu and <b>Guoying Zhao</b>. <u>Emotional Synchrony through 
 Regulatory Triggers in Collaborative Learning: A Facial Expression Recognition 
-Study. International Conference of the Learning Sciences (ICLS). 2023.</font></p>
+Study</u>. International Conference of the Learning Sciences (ICLS). 2023.</font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;292. Tuomas Varanka, Wei Peng, <b>
 Guoying Zhao</b>. <u>Learnable Eulerian Dynamics for Micro-Expression Action 
