--- a/personal.htm
+++ b/personal.htm
@@ -177,6 +177,12 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		<p style="margin-top: 24px; margin-bottom: 24px"><u><b>
 		<font face="Times New Roman">NEWS:</font></b></u></p>
 		<p style="margin-top: 24px; margin-bottom: 24px">
+		<font face="Times New Roman"><u><span lang="en-us">2023.05:</span></u>
+		<b>Dr. Qing Liu</b> awarded <b>Academy research fellow</b> position for 
+		four years (2023 Sep. to 2027 Aug.) for <span lang="en-us">project
+		</span>&quot;Towards reading retinal fundus images for real-world clinical 
+		applications&quot;<span lang="en-us">.</span></font></p>
+		<p style="margin-top: 24px; margin-bottom: 24px">
 		<font face="Times New Roman"><span lang="en-us"><u>2023.04:</u> <b>Dr. Yang 
 		L</b></span><b>iu</b> awarded two year grant from <b>Finnish Culture Foundation</b> (The 
 		North Ostrobothnia Regional Fund) for Postdoctoral Research in the field 
