--- a/personal.htm
+++ b/personal.htm
@@ -66,8 +66,8 @@ Europaea</span><span style="font-family: Times New Roman; ">.</span><span style=
 authored or co-authored more than <span lang="en-us">310</span> papers in journals and conferences, and 
 has served </span> </font><font size="4">
 <span style="font-family: Times New Roman; font-weight: normal">as a reviewer 
-for many journals and conferences. Her papers have currently over 25050 citations in Google Scholar 
-(h-index 75). She is 
+for many journals and conferences. Her papers have currently over 25570 citations in Google Scholar 
+(h-index 77). She is 
 <span lang="en-us">t</span>utorial <span lang="en-us">c</span>hair for ICPR 
 2024, panel chair for FG 2023, and publicity chair for SCIA 2023. S</span><span style="font-family: Times New Roman">he </span>
 <span style="font-family: Times New Roman; font-weight: normal">was </span>
@@ -103,10 +103,10 @@ Endeavour Research Fellowship, Ta</span></font><span style="font-family: Times N
 Kauta Foundation grant</span> 
 and Jorma Ollila grant. </font> </span><font size="4">
 <span style="font-family: Times New Roman; font-weight: normal">She is </span>
-<span style="font-family: Times New Roman; font-weight: 700">IEEE 
-Fellow</span><span style="font-family: Times New Roman; font-weight: normal">, </span>
-<span style="font-family: Times New Roman; font-weight: 700">IAPR Fellow</span><span style="font-family: Times New Roman; font-weight: normal"> and </span>
-<span style="font-family: Times New Roman; font-weight: 700">AAIA Fellow</span><span style="font-family: Times New Roman; font-weight: normal">. 
+<span style="font-family: Times New Roman; font-weight: 700">Fellow of</span><span style="font-family: Times New Roman; font-weight: normal"> </span>
+<span style="font-family: Times New Roman; font-weight: 700">IEEE</span><span style="font-family: Times New Roman; font-weight: normal">, </span>
+<span style="font-family: Times New Roman; font-weight: 700">IAPR, ELLIS</span><span style="font-family: Times New Roman; font-weight: normal"> and </span>
+<span style="font-family: Times New Roman; font-weight: 700">AAIA</span><span style="font-family: Times New Roman; font-weight: normal">. 
 Her current research interests include image and video representation, facial expression 
 and micro-expression 
 recognition, human motion analysis, remote physiological signal measure and 
@@ -176,6 +176,28 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		<img border="0" src="202109_Group.jpg" width="1128" height="754"></p>
 		<p style="margin-top: 24px; margin-bottom: 24px"><u><b>
 		<font face="Times New Roman">NEWS:</font></b></u></p>
+		<p style="margin-top: 24px; margin-bottom: 24px"><u>
+		<font face="Times New Roman">2024.01</u>: <b>Dr. <u>Haoyu Chen</u></b><u> 
+		will start as a (tenure track) <b>assistant professor</b> in CMVS, 
+		University of Oulu, Finland.</u></font></p>
+		<p style="margin-top: 24px; margin-bottom: 24px">
+		<font face="Times New Roman"><u>2023.12</u>: <b>Dr. Qianru Xu</b> 
+		awarded <b>S&auml;&auml;ti&ouml;iden post doc -pooli Grant</b> &quot;Project aurora: 
+		unraveling sundown syndrome in the arctic region&quot;, supported by the 
+		Finnish Cultural Foundation for two years.</font></p>
+		<p style="margin-top: 24px; margin-bottom: 24px"><span lang="en-us"><u>
+		<font face="Times New Roman">2023.11.09:<b> </b></font></u></span>
+		<font face="Times New Roman"><b>Dr. Wei Peng</b>¡¯s dissertation titled 
+		¡°Automatic neural network learning for human behavior understanding¡± 
+		awarded </font>
+		<span style="font-size: 12.0pt; font-family: 'Times New Roman',serif; font-weight: 700">
+		Finnish AI Dissertation Award&nbsp;2022</span><font face="Times New Roman"><span lang="en-us">.</span></font></p>
+		<p style="margin-top: 24px; margin-bottom: 24px">
+		<font face="Times New Roman"><u>2023.09.26:</u><b> </b>I gave a invited 
+		keynote titled &quot;<b><a target="_blank" href="https://ijcb2023.ieee-biometrics.org/keynote-talks/">What 
+		can machines read from human faces?</a></b>&quot; in <b>IEEE International 
+		Joint Conference on Biometrics (IJCB 2023)</b> held in Sep. 25-28 in 
+		Ljubljana, Slovenia.</font></p>
 		<p style="margin-top: 24px; margin-bottom: 24px">
 		<font face="Times New Roman"><u><span lang="en-us">2023.05:</span></u>
 		<b>Dr. Qing Liu</b> awarded <b>Academy research fellow</b> position for 
@@ -197,8 +219,9 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		<span lang="en-us">with <a target="_blank" href="https://ijcai-23.org/">
 		IJCAI 2023</a>. </span></font></p>
 		<p style="margin-top: 24px; margin-bottom: 24px">
-		<font face="Times New Roman">2021.06: Muzammil recently won the Tauno 
-		T&ouml;nning Foundation Grant.</font></p>
+		<font face="Times New Roman">2021.06: <b>Mr. Muzammil Behzad</b> recently won the 
+		<b>Tauno 
+		T&ouml;nning Foundation Grant</b>.</font></p>
 		<p style="margin-top: 24px; margin-bottom: 24px"><span lang="en-us">
 		<font face="Times New Roman">2021.03: </font></span>
 		<font face="Times New Roman"><b>The 2nd Multimodal Sentiment Analysis 
