--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -197,7 +197,7 @@ Selected to </font>
 <a target="_blank" href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/4?fbclid=IwAR1d4PyRLUjFosQfpmynpn2WHrufhuURBZCJZWQwPzo13ARvsb5rBRfFOQE">
 <font face="Times New Roman">world's top 2% scientists</font></a><font face="Times New Roman"> 
 (most widely cited scientists in different disciplines) by Stanford University 
-for four consecutive years (2019-2022).</font></b></font></p>
+for four consecutive years (2019-2023).</font></b></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 <font size="4">-- <b><u><span style="font-family: Times New Roman">Co-Program 
 chair of ACM International Conference on Multimodal Interaction 2021 (ICMI).</span></u></b></font></p>
@@ -267,7 +267,7 @@ Member: </font> </b></u> </span><u><font size="4">Pattern Recognition (JUFO
 2018.01-2021.12); Image and Vision Computing Journal (JUFO 2, 2015.09-); Journal 
 of Electronic Imaging (JUFO 1, 2017.09-2019.12); Frontiers in Psychology (JUFO 
 1, 2020-2024); International Journal of Network Dynamics and Intelligence 
-(2022-).</font></u></p>
+(2022-); Visual Intelligence (2023-).</font></u></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt">
 <a name="OLE_LINK139"><font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
@@ -346,7 +346,10 @@ Applications: Challenges and Solutions,<b> </b>IEEE Transactions on Systems,
 Man, and Cybernetics - Part B: Cybernetics, 2009-2010. </font> </span></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; line-height: 200%; margin-left: 21.0pt; text-indent:-21.0pt">
 <font size="4">--&nbsp;<span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:700; text-decoration:underline">Co-chair 
-of 2<span lang="en-us">1</span> international workshops</span><span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">: </span>
+of 2<span lang="en-us">2</span> international workshops</span><span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">: 
+<span lang="en-us">Workshop on Hybrid Intelligence with AD</span></span><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">RA 
+(AI, Data and Robotics Association ) forum</span><span lang="en-us" style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal"> 
+2023; </span>
 <span style="line-height: 125%">The 1st Challenge Workshop on Micro-gesture 
 Analysis for Hidden Emotion Un-derstanding (MiGA) with IJCAI 2023;</span></font><span lang="en-us"><font size="4"> 
 1st International Workshop on Multimodal and Responsible Affective Computing (MRAC 
@@ -420,6 +423,14 @@ Aug. 20-24, 2006, Hongkong.</font></span></p>
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 --</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><span style="font-family: 'Times New Roman'; font-weight: 700" lang="en-us"><u><font size="4">Invited talks:</font></u></span></p>
+<p style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt" class="MsoNormal">
+<font size="4">&nbsp;IEEE International Joint Conference on Biometrics (IJCB 
+2023), Sep. 25-28, Ljubljana, Slovenia.</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt" class="MsoNormal">
+<font size="4">Nordic Learning Analytics Summer Institute (NLASI 2023), June 1, 
+2023.</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt" class="MsoNormal">
+<font size="4">Science Forum, Helsinki, Finland, Jan. 13, 2023.</font><span class="q4iawc"></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; line-height:200%; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
 <font size="4">CNCC (China National Computer Congress) Micro-expression Forum, 
 Dec. 8, 2022.</font></p>
@@ -490,7 +501,7 @@ Nov. 1, 2014</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; text-autospace:ideograph-numeric ideograph-other; line-height:200%; text-indent:-21.0pt" class="MsoNormal">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 <font size="4">--&nbsp;</font></span><font size="4"><u><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: 700">Director of UOulu AI community</span></u><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal"><u> 
-(1.12.2018-)</u>.</span></font></p>
+(12.2018-12.2023)</u>.</span></font></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 <font size="4">--&nbsp;</font></span><font size="4"><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; text-decoration: underline; font-weight: 700">Vice-cooridinator</span><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal; text-decoration: underline"> 
