--- a/teammembers.htm
+++ b/teammembers.htm
@@ -35,7 +35,7 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Qing.jpg" width="132" height="165"></td>
 		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="Jukka.png" width="112" height="148"></td>
+		<img border="0" src="Jukka.jpg" width="148" height="162"></td>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Hanlin.jpg" width="157" height="149"></td>
 		<td height="0" align="center" valign="top" width="224">
@@ -105,7 +105,7 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="184">
 		<img border="0" src="Xingxun.jpg" width="130" height="148"></td>
 		<td height="0" align="center" valign="top" width="225">
-		&nbsp;</td>
+		<img border="0" src="Mengting.jpg"></td>
 	</tr>
 	<tr>
 		<td width="226" height="0" align="center" valign="top">
@@ -121,7 +121,8 @@ span.contentpasted0
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Mr. Xingxun JIANG</b></font></td>
 		<td height="0" align="center" valign="top" width="225">
-		&nbsp;</td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Ms. Mengting W</b></font><span lang="zh-cn"><b>EI</b></span></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -165,9 +166,11 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">&nbsp;</td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Huai-Qian K</b></font><span lang="en-us"><b>HOR</b></span></td>
 		<td width="226" height="0" align="center" valign="top">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">&nbsp;</td>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Ali S</b></font><span lang="en-us"><b>ALAR</b></span></td>
 		<td height="0" align="center" valign="top" width="224">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
@@ -182,7 +185,7 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="225">
-		&nbsp;</td>
+		<img border="0" src="Hao.jpg" width="155" height="155"></td>
 		<td width="223" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="224" height="0" align="center" valign="top">
@@ -194,9 +197,9 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="225">
-		<font face="Times New Roman"><b>Mr. Hao Yu</b></font></td>
+		<font face="Times New Roman"><b>Mr. Hao Y</b></font><span lang="en-us"><b><font face="Times New Roman">U</font></b></span></td>
 		<td width="223" height="0" align="center" valign="top">
-		&nbsp;</td>
+		<font face="Times New Roman"><b>Mr. Boyi Z</b></font><span lang="en-us"><b><font face="Times New Roman">HENG</font></b></span></td>
 		<td width="224" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="184" height="0" align="center" valign="top">
@@ -213,7 +216,7 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Yujie.jpg"></td>
 		<td height="0" align="center" valign="top" width="225">
-		　</td>
+		　<img border="0" src="Yushun.jpg" width="159" height="160"></td>
 		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
@@ -232,7 +235,15 @@ span.contentpasted0
 		China)</b></font></p>
 		<p style="text-align: center"><span lang="zh-cn">Aug. 2023 - Aug. 2024</span></td>
 		<td height="0" align="center" valign="top" width="225">
-		　</td>
+		　<b><span lang="zh-cn">Mr. Yushun X</span></b><span lang="en-us"><b>IAO</b></span><p>&nbsp;</p>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Doctoral student</b></font></p>
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Southeast University</b></font></p>
+		<p>&nbsp;</p>
+		<p><span lang="zh-cn">Oct. 2023 - Sep. 2025</span></p>
+		<p>&nbsp;</p>
+		<p>&nbsp;</td>
 		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
