--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -204,6 +204,10 @@ disciplines) by Stanford University for four consecutive years (2019-2022).</spa
 <span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">
 Research.com Computer Science in Finland Leader Award, 2022</span></span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<font size="4"><span style="font-family: Times New Roman">-- Dr. Wei Peng¡¯s dissertation titled 
+		¡°Automatic neural network learning for human behavior understanding¡± 
+		awarded <b>Finnish AI Dissertation Award&nbsp;2022</b>.</span></font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <font size="4"><span style="font-family: Times New Roman">-- 2022 International 
 Society for Magnetic Resonance in Medicine (ISMRM, best conference for MRI) 
 Magna Cum Laude Merit Award (top 5%), for the work ¡°Wei Peng, Li Feng, Guoying 
