--- a/main_experience.htm
+++ b/main_experience.htm
@@ -107,7 +107,7 @@ time): CAD Center, North China University of Technology.</font></p>
 </ul>
 <p style="text-align: left; margin-bottom:0.5cm; line-height:150%">
 <b><span style="font-size: 14pt">
-Projects as PI or Co-PI (Raised in total ~10.3 million EUR for my team):</span></b></p>
+Projects as PI or Co-PI (Raised in total ~11.3 million EUR for my team):</span></b></p>
 <ul>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
@@ -115,6 +115,11 @@ Projects as PI or Co-PI (Raised in total ~10.3 million EUR for my team):</span><
 	Professor</b> Grant (highest academic position of Academy of Finland): <b>
 	<a target="_blank" href="https://emotion-ai.rahtiapp.fi/">Towards vision-based emotion AI</a> (EmotionAI)</b>.&nbsp; 2 370 539 &#8364;. </span></font><span lang="EN-US"><font size="4">Overall success rate: 
 	4%.</font></span></li>
+	<li>
+	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
+	<font size="4"><span style="color: black">2024.03-2028.02 (No. ACMod 
+	101130271): HORIZON-MSCA-SE-2022: Affective Computing Models: from Facial 
+	Expression to Mind-Reading (ACMod). 1 656 000 &#8364; (Consortium Coordinator)</span></font></li>
 	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
 	<font size="4"><span style="color: black">2023.01-2028.12: Funding to 
